fix dark mode issue on icon

--- a/src/app/rework/features/letters-category-header/letters-category-header.scss
+++ b/src/app/rework/features/letters-category-header/letters-category-header.scss
@@ -17,6 +17,10 @@
       transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
       opacity: 0.5;
 
+      &.dark {
+        filter: invert(60%);
+      }
+
       &.collapsed {
         transform: rotate(-180deg);
       }
